--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta property="og:title" content="2nd International Workshop on Spatio-Temporal Reasoning and Learning 2023">
     <meta property="og:description" content="In this workshop, we invite the research community in artificial intelligence to submit works related to the integration of spatial and temporal reasoning with machine learning.">
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-P77LCK8QPT"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-QY11LC71CB"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
