--- a/index.html
+++ b/index.html
@@ -133,12 +133,12 @@
                 </a>
             </td>
             <td class="sponsor">
-                <a target="_blank" href="https://eps.leeds.ac.uk/computing/staff/258/dr-john-stell">
+                <a target="_blank" href="https://jaeheelee.gitlab.io/">
                     <img src="assets/jae.jpg" alt="Dr. Jae Hee Lee" style="width: 100%; height: 100%">
                 </a>
             </td>
             <td class="sponsor">
-                <a target="_blank" href="https://cecs.anu.edu.au/people/jochen-renz">
+                <a target="_blank" href="https://mehulbhatt.org/">
                     <img src="assets/mehul.jpg" alt="Prof. Mehul Bhat" style="width: 100%; height: 100%">
                 </a>
             </td>
