--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 
 <head>
     <base href=".">
+    <link rel="canonical" href="https://codesign-lab.org/strl23/">
     <link rel="shortcut icon" type="image/png" href="assets/favicon.png">
     <link rel="stylesheet" type="text/css" media="all" href="assets/main.css">
     <meta charset="utf-8">
+    <meta http-equiv="refresh" content="0; url=https://codesign-lab.org/strl23/">
     <meta name="description" content="2nd International Workshop on Spatio-Temporal Reasoning and Learning 2023">
     <meta name="resource-type" content="document">
     <meta name="distribution" content="global">
