--- a/backup.html
+++ b/backup.html
@@ -31,7 +31,7 @@
 <body>
 
     <div class="banner">
-        <img src="assets/banner.jpg" alt="Workshop Banner" style="width: 100%">
+        <img src="assets/banner.jpeg" alt="Workshop Banner" style="width: 100%">
         <div class="top-left">
             <span class="title1">2<sup>nd</sup> International Workshop on </span> <br>
             <span class="title2">Spatio-Temporal Reasoning</span> <br>
@@ -296,7 +296,7 @@
         </tr>
         <tr>
             <td class="speaker">
-                Junjie Peng (Southwest Jiaotong University, China)<br>Michael Sioutis (University of Montpellier, France)<br>()<br>Zhiguo Long (Southwest Jiaotong University, China)
+                Junjie Peng (Southwest Jiaotong University, China)<br>Michael Sioutis (University of Montpellier, France)<br>Zhiguo Long (Southwest Jiaotong University, China)
             </td>
         </tr>
     </table>
@@ -406,6 +406,7 @@ His general interests lie in Artificial Intelligence, Knowledge Representation a
         &copy; Workshop Organizers
         &nbsp;|&nbsp; Design by <a target="_blank" href="https://github.com/mikepierce">Mike Pierce</a>
         &nbsp;|&nbsp; Sponsored by <a target="_blank" href="https://ijcai-23.org/">IJCAI 2023</a> and <a target="_blank" href="http://ceur-ws.org/">CEUR-WS.org</a>
+        &nbsp;|&nbsp; Banner photo by <a target="_blank" href="https://500px.com/p/deensel">Mike</a> 
     </footer>
 
 </body>
