--- a/backup.html
+++ b/backup.html
@@ -240,7 +240,7 @@
     <table class="plenary">
         <tr>
             <td class="date" rowspan="2">
-                14:15
+                14:00
             </td>
             <td class="title">
                 Advancing Efficient Large-Scale Constraint Optimization Problem Solving by Integrating Machine Learning and Automated Reasoning | <a href="files/keynote2.pdf" target="_blank">pdf</a>
@@ -249,6 +249,22 @@
         <tr>
             <td class="speaker">
                 Shufeng Kong (Sun Yat-sen University, Guangzhou, China + Cornell University, USA)
+            </td>
+        </tr>
+    </table>
+    
+    <table>
+        <tr>
+            <td class="date" rowspan="2">
+                15:15
+            </td>
+            <td class="title">
+                Exploring the Impact of Disentangling Extraction and Reasoning in Multi-hop Spatial Reasoning | <a href="files/short1.pdf" target="_blank">pdf</a>
+            </td>
+        </tr>
+        <tr>
+            <td class="speaker">
+                Roshanak Mirzaee (Michigan State University, USA)<br>Parisa Kordjamshidi (Michigan State University, USA)
             </td>
         </tr>
     </table>
@@ -285,7 +301,7 @@
         </tr>
     </table>
 
-    <table class="plenary">
+    <table>
         <tr>
             <td class="date" rowspan="2">
                 16:30
@@ -308,22 +324,6 @@
             </td>
             <td class="title">
                 Joint Discussion and Final Remarks
-            </td>
-        </tr>
-    </table>
-    
-    <table>
-        <tr>
-            <td class="date" rowspan="2">
-                17:30
-            </td>
-            <td class="title-special">
-                End
-            </td>
-        </tr>
-        <tr>
-            <td class="abstract">
-                <!-- Kept for Spacing -->
             </td>
         </tr>
     </table>
