--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 
     <p><a href="#top">Go back to the top</a></p>
 
-    <h2 id="Program">Workshop Program</h2>
+    <h2 id="Program">Workshop Program (Tentative)</h2>
 
     <table>
         <tr>
@@ -147,7 +147,7 @@
                 9:15
             </td>
             <td class="title">
-                Spatial and Temporal Reasoning with LLMs for Natural Language Comprehension and Grounding | <a href="files/keynote1.pdf" target="_blank">pdf</a>
+                Spatial and Temporal Reasoning with LLMs for Natural Language Comprehension and Grounding
             </td>
         </tr>
         <tr>
@@ -179,7 +179,7 @@
                 11:00
             </td>
             <td class="title">
-                Listening Style-Aware Dyadic Facial Motion Generation | <a href="files/paper1.pdf" target="_blank">pdf</a>
+                Listening Style-Aware Dyadic Facial Motion Generation
             </td>
         </tr>
         <tr>
@@ -195,7 +195,7 @@
                 11:30
             </td>
             <td class="title">
-                Geographical Cellular Traffic Prediction with Multivariate Spatio-Temporal Modeling | <a href="files/paper2.pdf" target="_blank">pdf</a>
+                Geographical Cellular Traffic Prediction with Multivariate Spatio-Temporal Modeling
             </td>
         </tr>
         <tr>
@@ -211,7 +211,7 @@
                 12:00
             </td>
             <td class="title">
-                Geospatial Prediction Using Road Topology: A Graph-based Perspective | <a href="files/paper3.pdf" target="_blank">pdf</a>
+                Geospatial Prediction Using Road Topology: A Graph-based Perspective
             </td>
         </tr>
         <tr>
@@ -243,7 +243,7 @@
                 14:00
             </td>
             <td class="title">
-                Advancing Efficient Large-Scale Constraint Optimization Problem Solving by Integrating Machine Learning and Automated Reasoning | <a href="files/keynote2.pdf" target="_blank">pdf</a>
+                Advancing Efficient Large-Scale Constraint Optimization Problem Solving by Integrating Machine Learning and Automated Reasoning
             </td>
         </tr>
         <tr>
@@ -259,7 +259,7 @@
                 15:15
             </td>
             <td class="title">
-                Exploring the Impact of Disentangling Extraction and Reasoning in Multi-hop Spatial Reasoning | <a href="files/short1.pdf" target="_blank">pdf</a>
+                Exploring the Impact of Disentangling Extraction and Reasoning in Multi-hop Spatial Reasoning
             </td>
         </tr>
         <tr>
@@ -291,7 +291,7 @@
                 16:00
             </td>
             <td class="title">
-                An Evolutionary Geospatial Regression Tree | <a href="files/paper4.pdf" target="_blank">pdf</a>
+                An Evolutionary Geospatial Regression Tree
             </td>
         </tr>
         <tr>
@@ -307,7 +307,7 @@
                 16:30
             </td>
             <td class="title">
-                On Neuro-Symbolic Challenges in Directional Relation Prediction | <a href="files/paper5.pdf" target="_blank">pdf</a>
+                On Neuro-Symbolic Challenges in Directional Relation Prediction
             </td>
         </tr>
         <tr>
