--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                 9:15
             </td>
             <td class="title">
-                Spatial and Temporal Reasoning with LLMs for Natural Language Comprehension and Grounding
+                <em>Keynote:</em> Spatial and Temporal Reasoning with LLMs for Natural Language Comprehension and Grounding
             </td>
         </tr>
         <tr>
@@ -243,7 +243,7 @@
                 14:00
             </td>
             <td class="title">
-                Advancing Efficient Large-Scale Constraint Optimization Problem Solving by Integrating Machine Learning and Automated Reasoning
+                <em>Keynote:</em> Advancing Efficient Large-Scale Constraint Optimization Problem Solving by Integrating Machine Learning and Automated Reasoning
             </td>
         </tr>
         <tr>
