--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
             </td>
         </tr>
     </table>
+    
+    <h2>About</h2>
+    <p>This is a secondary mirror site of <a target="_blank" href="https://codesign-lab.org/strl23/">https://codesign-lab.org/strl23/</a>, replicating the essential content.</p>
 
     <h2>Introduction</h2>
     <p>Opposing the false dilemma of logical reasoning vs machine learning, we argue for a synergy between these two paradigms in order to obtain hybrid AI systems that will be robust, generalizable, and transferable. Indeed, it is well-known that machine learning only includes statistical information and, therefore, is not <em>inherently</em> able to capture perturbations (interventions or changes in the environment), or perform reasoning and planning. Ideally, (the training of) machine learning models should be tied to assumptions that align with physics and human cognition to allow for these models to be re-used and re-purposed in novel scenarios. On the other hand, it is also the case that logic in itself can be brittle too, and logic further assumes that the symbols with which it can reason are already given. It is becoming ever more evident in the literature that modular AI architectures should be prioritized, where the involved knowledge about the world and the reality that we are operating in is decomposed into independent and recomposable pieces, as such an approach should only increase the chances that these systems behave in a causally sound manner.</p>
