--- a/program.html
+++ b/program.html
@@ -13,11 +13,16 @@
 
     <table>
         <tr>
-            <td class="date" rowspan="1">
+            <td class="date" rowspan="2">
                 9:00
             </td>
             <td class="title-special">
                 Welcome and Coffee &amp; Tea!
+            </td>
+        </tr>
+        <tr>
+            <td class="abstract">
+                <!-- Kept for Spacing -->
             </td>
         </tr>
     </table>
@@ -28,7 +33,7 @@
                 9:15
             </td>
             <td class="title">
-                Spatial and Temporal Reasoning with LLMs for Natural Language Comprehension and Grounding
+                <em>Keynote:</em> Spatial and Temporal Reasoning with LLMs for Natural Language Comprehension and Grounding
             </td>
         </tr>
         <tr>
@@ -40,11 +45,16 @@
     
     <table>
         <tr>
-            <td class="date" rowspan="1">
+            <td class="date" rowspan="2">
                 10:30
             </td>
             <td class="title-special">
                 Coffee &amp; Tea Break
+            </td>
+        </tr>
+        <tr>
+            <td class="abstract">
+                <!-- Kept for Spacing -->
             </td>
         </tr>
     </table>
@@ -55,15 +65,31 @@
                 11:00
             </td>
             <td class="title">
-                Listening Style-Aware Dyadic Facial Motion Generation
+                <em>Invited Paper:</em> Scalable Coupling of Deep Learning with Logical Reasoning
             </td>
         </tr>
         <tr>
             <td class="speaker">
-                Gourav Datta (University of Southern California, Los Angeles, USA)<br>Boshi Huang (Amazon Alexa AI, Sunnyvale, USA)<br>Nitesh Sekhar (Amazon Alexa AI, Sunnyvale, USA)<br>Vivek Yadav (Amazon Alexa AI, Sunnyvale, USA)<br>Shih-Yao Lin (Amazon Alexa AI, Sunnyvale, USA)<br>Ayush Jaiswal (Amazon Alexa AI, Sunnyvale, USA)<br>Prateek Singhal (Amazon Alexa AI, Sunnyvale, USA)
+                Marianne Defresne (University of Toulouse, France + Toulouse Biotechnology Institute, France)<br>Sophie Barbe (Toulouse Biotechnology Institute, France)<br>Thomas Schiex (University of Toulouse, France)
             </td>
         </tr>
-    </table>
+    </table>  
+    
+    <table>
+        <tr>
+            <td class="date" rowspan="2">
+                11:15
+            </td>
+            <td class="title">
+                <em>Invited Paper:</em> TBD
+            </td>
+        </tr>
+        <tr>
+            <td class="speaker">
+                TBD
+            </td>
+        </tr>
+    </table>  
 
     <table>
         <tr>
@@ -99,11 +125,16 @@
 
     <table>
         <tr>
-            <td class="date" rowspan="1">
+            <td class="date" rowspan="2">
                 12:30
             </td>
             <td class="title-special">
                 Lunch Break
+            </td>
+        </tr>
+        <tr>
+            <td class="abstract">
+                <!-- Kept for Spacing -->
             </td>
         </tr>
     </table>
@@ -114,7 +145,7 @@
                 14:00
             </td>
             <td class="title">
-                Advancing Efficient Large-Scale Constraint Optimization Problem Solving by Integrating Machine Learning and Automated Reasoning
+                <em>Keynote:</em> Advancing Efficient Large-Scale Constraint Optimization Problem Solving by Integrating Machine Learning and Automated Reasoning
             </td>
         </tr>
         <tr>
@@ -142,11 +173,16 @@
 
     <table>
         <tr>
-            <td class="date" rowspan="1">
+            <td class="date" rowspan="2">
                 15:30
             </td>
             <td class="title-special">
                 Coffee &amp; Tea Break
+            </td>
+        </tr>
+        <tr>
+            <td class="abstract">
+                <!-- Kept for Spacing -->
             </td>
         </tr>
     </table>
@@ -173,6 +209,22 @@
                 16:30
             </td>
             <td class="title">
+                Listening Style-Aware Dyadic Facial Motion Generation
+            </td>
+        </tr>
+        <tr>
+            <td class="speaker">
+                Gourav Datta (University of Southern California, Los Angeles, USA)<br>Boshi Huang (Amazon Alexa AI, Sunnyvale, USA)<br>Nitesh Sekhar (Amazon Alexa AI, Sunnyvale, USA)<br>Vivek Yadav (Amazon Alexa AI, Sunnyvale, USA)<br>Shih-Yao Lin (Amazon Alexa AI, Sunnyvale, USA)<br>Ayush Jaiswal (Amazon Alexa AI, Sunnyvale, USA)<br>Prateek Singhal (Amazon Alexa AI, Sunnyvale, USA)
+            </td>
+        </tr>
+    </table>
+
+    <table>
+        <tr>
+            <td class="date" rowspan="2">
+                17:00
+            </td>
+            <td class="title">
                 On Neuro-Symbolic Challenges in Directional Relation Prediction
             </td>
         </tr>
@@ -186,7 +238,7 @@
     <table>
         <tr>
             <td class="date" rowspan="1">
-                17:00
+                17:30
             </td>
             <td class="title">
                 Joint Discussion and Final Remarks
