--- a/index.html
+++ b/index.html
@@ -182,15 +182,31 @@
                 11:00
             </td>
             <td class="title">
-                Listening Style-Aware Dyadic Facial Motion Generation
+                <em>Invited Paper:</em> Scalable Coupling of Deep Learning with Logical Reasoning
             </td>
         </tr>
         <tr>
             <td class="speaker">
-                Gourav Datta (University of Southern California, Los Angeles, USA)<br>Boshi Huang (Amazon Alexa AI, Sunnyvale, USA)<br>Nitesh Sekhar (Amazon Alexa AI, Sunnyvale, USA)<br>Vivek Yadav (Amazon Alexa AI, Sunnyvale, USA)<br>Shih-Yao Lin (Amazon Alexa AI, Sunnyvale, USA)<br>Ayush Jaiswal (Amazon Alexa AI, Sunnyvale, USA)<br>Prateek Singhal (Amazon Alexa AI, Sunnyvale, USA)
+                Marianne Defresne (University of Toulouse, France + Toulouse Biotechnology Institute, France)<br>Sophie Barbe (Toulouse Biotechnology Institute, France)<br>Thomas Schiex (University of Toulouse, France)
             </td>
         </tr>
-    </table>
+    </table>  
+    
+    <table>
+        <tr>
+            <td class="date" rowspan="2">
+                11:15
+            </td>
+            <td class="title">
+                <em>Invited Paper:</em> TBD
+            </td>
+        </tr>
+        <tr>
+            <td class="speaker">
+                TBD
+            </td>
+        </tr>
+    </table>  
 
     <table>
         <tr>
@@ -310,6 +326,22 @@
                 16:30
             </td>
             <td class="title">
+                Listening Style-Aware Dyadic Facial Motion Generation
+            </td>
+        </tr>
+        <tr>
+            <td class="speaker">
+                Gourav Datta (University of Southern California, Los Angeles, USA)<br>Boshi Huang (Amazon Alexa AI, Sunnyvale, USA)<br>Nitesh Sekhar (Amazon Alexa AI, Sunnyvale, USA)<br>Vivek Yadav (Amazon Alexa AI, Sunnyvale, USA)<br>Shih-Yao Lin (Amazon Alexa AI, Sunnyvale, USA)<br>Ayush Jaiswal (Amazon Alexa AI, Sunnyvale, USA)<br>Prateek Singhal (Amazon Alexa AI, Sunnyvale, USA)
+            </td>
+        </tr>
+    </table>
+
+    <table>
+        <tr>
+            <td class="date" rowspan="2">
+                17:00
+            </td>
+            <td class="title">
                 On Neuro-Symbolic Challenges in Directional Relation Prediction
             </td>
         </tr>
@@ -323,7 +355,7 @@
     <table>
         <tr>
             <td class="date" rowspan="1">
-                17:00
+                17:30
             </td>
             <td class="title">
                 Joint Discussion and Final Remarks
