--- a/index.html
+++ b/index.html
@@ -198,12 +198,12 @@
                 11:15
             </td>
             <td class="title">
-                <em>Invited Paper:</em> TBD
+                <em>Invited Paper:</em> TBA
             </td>
         </tr>
         <tr>
             <td class="speaker">
-                TBD
+                TBA
             </td>
         </tr>
     </table>  
