--- a/program.html
+++ b/program.html
@@ -81,15 +81,15 @@
                 11:15
             </td>
             <td class="title">
-                <em>Invited Paper:</em> TBA
+                <em>Invited Paper:</em> IPGPT: Solving Integer Programming Problems with Sequence to Contrastive Multi-Label Learning
             </td>
         </tr>
         <tr>
             <td class="speaker">
-                TBA
+                Shufeng Kong (Sun Yat-sen University, Guangzhou, China + Cornell University, USA)<br>Caihua Liu (Guilin University of Electronic Technology, Guilin, China)<br>Carla Gomes (Sun Yat-sen University, Guangzhou, China)
             </td>
         </tr>
-    </table>  
+    </table>    
 
     <table>
         <tr>
