--- a/index.html
+++ b/index.html
@@ -198,12 +198,12 @@
                 11:15
             </td>
             <td class="title">
-                <em>Invited Paper:</em> IPGPT: Solving Integer Programming Problems with Sequence to Contrastive Multi-Label Learning
+                <em>Invited Paper:</em> TBA
             </td>
         </tr>
         <tr>
             <td class="speaker">
-                Shufeng Kong (Sun Yat-sen University, Guangzhou, China + Cornell University, USA)<br>Caihua Liu (Guilin University of Electronic Technology, Guilin, China)<br>Carla Gomes (Sun Yat-sen University, Guangzhou, China)
+                TBA
             </td>
         </tr>
     </table>  
