--- a/index.html
+++ b/index.html
@@ -198,12 +198,12 @@
                 11:15
             </td>
             <td class="title">
-                <em>Invited Paper:</em> TBA
+                <em>Invited Paper:</em> Ranking Information in Knowledge Bases: A Principle-Driven Framework
             </td>
         </tr>
         <tr>
             <td class="speaker">
-                TBA
+                Badran Raddaoui (Telecom SudParis, France)<br>Christian Stra&szlig;er (Ruhr University Bochum, Germany)<br>Said Jabbour (University of Artois, France)
             </td>
         </tr>
     </table>  
