--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
                 15:15
             </td>
             <td class="title">
-                Exploring the Impact of Disentangling Extraction and Reasoning in Multi-hop Spatial Reasoning
+                Dual-Phase Models for Extracting Information and Symbolic Reasoning: A Case-Study in Spatial Reasoning
             </td>
         </tr>
         <tr>
