--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                 11:00
             </td>
             <td class="title">
-                <em>Invited Paper:</em> Scalable Coupling of Deep Learning with Logical Reasoning
+                <em>Invited Presentation:</em> Scalable Coupling of Deep Learning with Logical Reasoning
             </td>
         </tr>
         <tr>
@@ -198,7 +198,7 @@
                 11:15
             </td>
             <td class="title">
-                <em>Invited Paper:</em> Ranking Information in Knowledge Bases: A Principle-Driven Framework
+                <em>Invited Presentation:</em> Ranking Information in Knowledge Bases: A Principle-Driven Framework
             </td>
         </tr>
         <tr>
