backlink to ceur

--- a/index.html
+++ b/index.html
@@ -123,10 +123,13 @@
     <h3>Proceedings</h3>
 
     <p>The accepted papers will appear on the workshop website. We also intend to publish the workshop proceedings with <a target="_blank" href="http://ceur-ws.org/">CEUR-WS.org</a>; this option will be discussed with the authors of accepted papers and is subject to the CEUR-WS.org preconditions. We note that, as STRL 2023 is a workshop, not a conference, submission of the same paper to conferences or journals is acceptable from our standpoint.</p>
+   
+    <p>The back-link to the URL of the workshop proceedings published with CEUR-WS.org is now available at <a target="_blank" href="https://ceur-ws.org/Vol-3475/">https://ceur-ws.org/Vol-3475/</a>.
+
 
     <p><a href="#top">Go back to the top</a></p>
 
-    <h2 id="Program">Workshop Program (Tentative)</h2>
+    <h2 id="Program">Workshop Program</h2>
 
     <table>
         <tr>
