--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <p>The aim of this workshop is to formalize such a synergy between logical reasoning and machine learning that will be grounded on spatial and temporal knowledge. We argue that the calculi associated with the spatial and temporal reasoning community, be it qualitative or quantitative, naturally build upon physics and human cognition, and could therefore form a module that would be beneficial towards causal representation learning. A (symbolic) spatio-temporal knowledge base could provide a dependable <em>causal seed</em> upon which machine learning models could generalize, and exploring this direction from various perspectives is the main theme of this workshop.</p>
     
     <h3>Previous Editions</h3>
-    <p>You may find details about previous efitions of this workshop via the links below:</p>
+    <p>You may find details about previous editions of this workshop via the links below:</p>
 
     <ul>
     <li><a target="_blank" href="https://strl2022.github.io/">STRL 2022</a></li>
